--- a/NGINX - v1.26.2/conf/nginx.conf
+++ b/NGINX - v1.26.2/conf/nginx.conf
@@ -137,14 +137,10 @@ http
 			root					errors/;
 		}
 
-		error_page 503 /errors/503.html;
-		location = /503.html
-		{
-			root					errors/;
-		}
-
 		error_page 404 /errors/404.html;
-		location = /404.html
+		error_page 503 /errors/503.html;
+		error_page 504 /errors/504.html;
+		location ^~ /(404|503|504).html
 		{
 			root					errors/;
 		}
