added cookie parser

--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -44,7 +44,7 @@ events
 #	}
 #}
 
-########################## unfinished ##################################################################
+############################################################################################
 
 http 
 {
@@ -60,8 +60,8 @@ http
 	gzip							on;
 
 	# https://blog.nginx.org/blog/rate-limiting-nginx
-	limit_req_zone $binary_remote_addr zone=zone_name_here:10m rate=4r/s;
-	limit_req zone=zone_name_here burst=6 nodelay;
+	limit_req_zone					$binary_remote_addr zone=zone_name_here:10m rate=4r/s;
+	limit_req						zone=zone_name_here burst=6 nodelay;
 
 	# sets Connection header to close
 	keepalive_requests				0;
@@ -70,8 +70,8 @@ http
 	server
 	{
 		listen						127.0.0.1:80;
-		listen						10.93.19.1:80;
-		listen						172.16.20.69:80;
+		#listen						10.93.19.1:80;
+		#listen						172.16.20.69:80;
 
 		location /
 		{
@@ -83,12 +83,12 @@ http
 	server
 	{
 		listen						127.0.0.1:443 ssl;
-		listen						10.93.19.1:443 ssl;
-		listen						172.16.20.69:443 ssl;
+		#listen						10.93.19.1:443 ssl;
+		#listen						172.16.20.69:443 ssl;
 
-		ssl_certificate				"C:\server.crt";
-		ssl_certificate_key			"C:\privateKey.pem";
-		#ssl_trusted_certificate	"../test.internal_chain.crt";
+		ssl_certificate				"C:\_certs\server.crt";
+		ssl_certificate_key			"C:\_certs\privateKey.pem";
+		ssl_trusted_certificate		"C:\_certs\server_chain.crt";
 		#ssl_stapling				on;
 		#ssl_stapling_verify		on;
 
