--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -77,9 +77,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\PostLoginHandler.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\Authenticated.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\SendLoginPage.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\Login.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\_SessionState.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\401.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\400.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\404.cs" />
@@ -87,11 +89,14 @@
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\431.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\InitializeErrors.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\SendError.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetCookie.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetHeader.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestContent.cs" />
     <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Loop.cs" />
     <Compile Include="Worker\ConnectionHandler\2. MainServeLoop.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\ConstructHttpResponse.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetClientIP.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestMethode.cs" />
     <Compile Include="Worker\InitializeWorker.cs" />
     <Compile Include="Worker\Logging\Interface.cs" />
     <Compile Include="Worker\Logging\LogMessage.cs" />
