--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -77,16 +77,21 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. GET-Router.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. POST-Router.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\CGI\UserFilesView.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. Authenticated.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\SendLoginPage.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\1. FileSharingHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. ValidateToken.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\ValidateToken.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\_SessionState.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Errors\403.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\401.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\400.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\404.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\429.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Errors\501.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\Errors\507.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\431.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\InitializeErrors.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Errors\SendError.cs" />
@@ -95,7 +100,7 @@
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetHttpPath.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestContent.cs" />
     <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Loop.cs" />
-    <Compile Include="Worker\ConnectionHandler\2. MainServeLoop.cs" />
+    <Compile Include="Worker\ConnectionHandler\2. Serve.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\ConstructHttpResponse.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetClientIP.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestMethode.cs" />
@@ -116,10 +121,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Worker\ConnectionHandler\FileShare-Login\FilesViewCGI\" />
-    <Folder Include="Worker\ConnectionHandler\FileShare-Login\User\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="App\shell32_241.ico" />
     <None Include="bin\Debug\html\fileSharing\login.html" />
