--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -63,6 +63,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>lib\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web" />
   </ItemGroup>
@@ -108,11 +112,12 @@
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\ConstructHttpResponse.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetClientIP.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestMethode.cs" />
-    <Compile Include="Worker\InitializeWorker.cs" />
+    <Compile Include="Worker\InitializeDatabase.cs" />
+    <Compile Include="Worker\_InitializeWorker.cs" />
     <Compile Include="Worker\Logging\Interface.cs" />
     <Compile Include="Worker\Logging\LogMessage.cs" />
     <Compile Include="Worker\Logging\LogSeverity.cs" />
-    <Compile Include="Worker\Shutdown.cs" />
+    <Compile Include="Worker\_Shutdown.cs" />
     <Compile Include="Worker\ThreadPoolFast.cs" />
     <Compile Include="xDebug.cs" />
   </ItemGroup>
@@ -128,6 +133,9 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="App\shell32_241.ico" />
+    <None Include="lib\SQLite.Interop.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="bin\Debug\html\fileSharing\login.html" />
     <None Include="bin\Debug\html\dataCollection.html" />
     <None Include="bin\Debug\html\landingPage.html" />
