re-enabled nginx server ciphers (was off for testing)

--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -92,7 +92,7 @@ http
 		#ssl_stapling				on;
 		#ssl_stapling_verify		on;
 
-		ssl_prefer_server_ciphers	off;
+		ssl_prefer_server_ciphers	on;
 		ssl_protocols				TLSv1.3;
 		ssl_ciphers					'TLS_AES_256_GCM_SHA384:ECDHE-ECDSA-AES256-GCM-SHA384';
 		ssl_ecdh_curve				secp384r1;
