--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -84,26 +84,28 @@
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. GETHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. POSTHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\CGI\ControlPanel.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\CGI\UserFilesView.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\CGI\ControlPanel.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\CGI\UserFilesView.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PerformLogin.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ValidateClient.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ParseCredentials.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\SendLoginPage.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\SendLoggedOutPage.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\SendLoginPage.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\1. FileSharingHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\_UserDB.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\_CookieDB.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\403.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\401.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\400.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\404.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\429.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\501.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\507.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\431.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\InitializeErrors.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Errors\SendError.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\403.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\401.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\400.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\404.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\429.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\500.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\501.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\507.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\431.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\InitializeErrors.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\SendError.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetContent.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetTokenCookie.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetHeader.cs" />
@@ -135,11 +137,10 @@
   <ItemGroup>
     <Content Include="App\shell32_241.ico" />
     <Content Include="bin\Debug\html\fileSharing\controlPanel.html" />
+    <None Include="bin\Debug\html\fileSharing\loggedOut.html" />
     <None Include="bin\Debug\html\fileSharing\loginExpired.html" />
     <None Include="bin\Debug\html\fileSharing\loginError.html" />
     <None Include="bin\Debug\html\fileSharing\login.html" />
-    <None Include="bin\Debug\html\dataCollection.html" />
-    <None Include="bin\Debug\html\landingPage.html" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8.1">
