--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -84,38 +84,39 @@
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. GETHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. POSTHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\CGI\ControlPanel.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\CGI\UserFilesView.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendControlPanel.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendCreateUser.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendUserConfig.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PerformLogin.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ValidateClient.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ParseCredentials.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\SendLoggedOutPage.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\SendLoginPage.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoggedOutPage.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoginPage.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\1. FileSharingHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\_UserDB.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\_CookieDB.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\403.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\401.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\400.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\404.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\429.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\500.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\501.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\507.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\431.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\InitializeErrors.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\STATIC\SendError.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetContent.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetTokenCookie.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetHeader.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetHttpPath.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetContentLength.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\403.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\401.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\400.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\404.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\429.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\500.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\501.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\507.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\431.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\InitializeErrors.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\SendError.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetContent.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetTokenCookie.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetHeader.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetHttpPath.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetContentLength.cs" />
     <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Loop.cs" />
     <Compile Include="Worker\ConnectionHandler\2. Serve.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\ConstructHttpResponse.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetClientIP.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML\Message-Tools\GetRequestMethode.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\ConstructHttpResponse.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetClientIP.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetRequestMethode.cs" />
     <Compile Include="Worker\_InitializeWorker.cs" />
     <Compile Include="Worker\Logging\Interface.cs" />
     <Compile Include="Worker\Logging\LogMessage.cs" />
@@ -136,7 +137,9 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="App\shell32_241.ico" />
-    <Content Include="bin\Debug\html\fileSharing\controlPanel.html" />
+    <Content Include="bin\Debug\html\fileSharing\controlPanel\createUser.html" />
+    <Content Include="bin\Debug\html\fileSharing\controlPanel\userConfig.html" />
+    <Content Include="bin\Debug\html\fileSharing\controlPanel\controlPanel.html" />
     <None Include="bin\Debug\html\fileSharing\loggedOut.html" />
     <None Include="bin\Debug\html\fileSharing\loginExpired.html" />
     <None Include="bin\Debug\html\fileSharing\loginError.html" />
