--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -87,18 +87,22 @@
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendControlPanel.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendCreateUser.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendUserConfig.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendUserFilesView.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendChangePassword.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PerformLogin.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ValidateClient.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\ParseCredentials.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoggedOutPage.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoginPage.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoggedOut.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLogin.cs" />
     <Compile Include="Worker\ConnectionHandler\FileShare-Login\1. FileSharingHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\_UserDB.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\_CookieDB.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\UserDB.cs" />
+    <Compile Include="Worker\ConnectionHandler\FileShare-Login\CookieDB.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\RedirectClient.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\403.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\401.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\400.cs" />
+    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\409.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\404.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\429.cs" />
     <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\500.cs" />
@@ -140,6 +144,7 @@
     <Content Include="bin\Debug\html\fileSharing\controlPanel\createUser.html" />
     <Content Include="bin\Debug\html\fileSharing\controlPanel\userConfig.html" />
     <Content Include="bin\Debug\html\fileSharing\controlPanel\controlPanel.html" />
+    <None Include="bin\Debug\html\fileSharing\changePassword.html" />
     <None Include="bin\Debug\html\fileSharing\loggedOut.html" />
     <None Include="bin\Debug\html\fileSharing\loginExpired.html" />
     <None Include="bin\Debug\html\fileSharing\loginError.html" />
