--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -46,7 +46,7 @@ events
 
 ############################################################################################
 
-http 
+http
 {
 	include							mime.types;
 	default_type					application/octet-stream;
@@ -66,7 +66,7 @@ http
 	# sets Connection header to close
 	keepalive_requests				0;
 
-	# redirect http
+	# redirect http + acme proxy
 	server
 	{
 		listen						127.0.0.1:80;
@@ -76,6 +76,17 @@ http
 		location /
 		{
 			return					301 https://$host$request_uri;
+		}
+
+		location ^~ /.well-known/acme-challenge/
+		{
+			proxy_pass				http://10.0.1.123:8080;
+			error_page 502			@acmeFallback;
+		}
+
+		location @acmeFallback
+		{
+			return					404;
 		}
 	}
 
@@ -103,10 +114,6 @@ http
 
 		##################################################################################
 
-		location = / { try_files /landingPage.html =404; }
-		location = /favicon.ico { try_files /favicon.ico =404; }
-		location = /dataCollection { try_files /dataCollection.html =404; }
-
 		location ^~ /fileSharing
 		{
 			proxy_pass				http://127.0.0.1:8080;
@@ -114,26 +121,14 @@ http
 			proxy_http_version		1.1;
 		}
 
-		############ security headers ############
-		add_header Access-Control-Allow-Methods 'GET, POST';
-
-		add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
-		add_header X-Frame-Options DENY;
-		add_header Referrer-Policy no-referrer-when-downgrade;
-		add_header X-Content-Type-Options nosniff always;
-
-		add_header Permissions-Policy "camera=(), display-capture=(), fullscreen=(self), geolocation=(), magnetometer=(), microphone=(), midi=(), payment=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), speaker-selection=()";
-
-		add_header Cache-Control private;
-		add_header Cross-Origin-Embedder-Policy "require-corp";
-		add_header Cross-Origin-Opener-Policy "same-origin";
-		add_header Cross-Origin-Resource-Policy "same-site";
+		location = / { try_files /landingPage.html =404; }
+		location = /favicon.ico { try_files /favicon.ico =404; }
+		location = /dataCollection { try_files /dataCollection.html =404; }
 
 		############ error pages ############
-
 		error_page 502 /errors/502.html;
 		location ^~ ^/502\.(html|png)$
-        {
+		{
 			root					errors/;
 		}
 
@@ -195,4 +190,20 @@ http
 		#error_page 496 ../errors/496.html;
 		#error_page 497 ../errors/497.html;
 	}
+
+	############ security headers ############
+	add_header Access-Control-Allow-Methods 'GET, POST';
+	add_header Content-Security-Policy "default-src 'self'; style-src 'unsafe-inline'; frame-ancestors 'none'; form-action 'self';";
+
+	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+	add_header X-Frame-Options DENY;
+	add_header Referrer-Policy no-referrer-when-downgrade;
+	add_header X-Content-Type-Options nosniff always;
+
+	add_header Permissions-Policy "camera=(), display-capture=(), fullscreen=(self), geolocation=(), magnetometer=(), microphone=(), midi=(), payment=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), speaker-selection=()";
+
+	add_header Cache-Control private;
+	add_header Cross-Origin-Embedder-Policy "require-corp";
+	add_header Cross-Origin-Opener-Policy "same-origin";
+	add_header Cross-Origin-Resource-Policy "same-site";
 }
