restructure and cleanup

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -86,46 +86,45 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. GETHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\2. POSTHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendControlPanel.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\CreateUser.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendCreateUser.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\controlPanel\SendUserConfig.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendUserFilesView.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendChangePassword.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\PerformLogin.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\ValidateClient.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\PasswordTools.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\ParseCredentials.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLoggedOut.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\HTML\SendLogin.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\1. WebRootHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\UserDB.cs" />
-    <Compile Include="Worker\ConnectionHandler\FileShare-Login\CookieDB.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\RedirectClient.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\403.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\401.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\400.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\409.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\404.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\429.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\500.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\501.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\507.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\431.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\InitializeErrors.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\STATIC\SendError.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetContent.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetTokenCookie.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetHeader.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetHttpPath.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetContentLength.cs" />
-    <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Loop.cs" />
+    <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Worker Loop.cs" />
     <Compile Include="Worker\ConnectionHandler\2. Serve.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\ConstructHttpResponse.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetClientIP.cs" />
-    <Compile Include="Worker\ConnectionHandler\HTML-Internal\Message-Tools\GetRequestMethode.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\CreateUser.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendControlPanel.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendUserConfig.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLoggedOut.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLogin.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\SendChangePassword.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\SendUserFilesView.cs" />
+    <Compile Include="Worker\ConnectionHandler\_CookieDB.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\.WebRootHandler.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\_GETHandler.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\_POSTHandler.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ClientAuth\ParseCredentials.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ClientAuth\PasswordTools.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ClientAuth\PerformLogin.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ClientAuth\ValidateClient.cs" />
+    <Compile Include="Worker\ConnectionHandler\_UserDB.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\ConstructHttpResponse.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetClientIP.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetContent.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetContentLength.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetHeader.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetHttpPath.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetRequestMethode.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\GetTokenCookie.cs" />
+    <Compile Include="Worker\Internals\HTTP-Tools\RedirectClient.cs" />
+    <Compile Include="Worker\Internals\STATIC\400.cs" />
+    <Compile Include="Worker\Internals\STATIC\401.cs" />
+    <Compile Include="Worker\Internals\STATIC\403.cs" />
+    <Compile Include="Worker\Internals\STATIC\404.cs" />
+    <Compile Include="Worker\Internals\STATIC\409.cs" />
+    <Compile Include="Worker\Internals\STATIC\429.cs" />
+    <Compile Include="Worker\Internals\STATIC\431.cs" />
+    <Compile Include="Worker\Internals\STATIC\500.cs" />
+    <Compile Include="Worker\Internals\STATIC\501.cs" />
+    <Compile Include="Worker\Internals\STATIC\507.cs" />
+    <Compile Include="Worker\Internals\STATIC\InitializeErrors.cs" />
+    <Compile Include="Worker\Internals\STATIC\SendError.cs" />
     <Compile Include="Worker\_InitializeWorker.cs" />
     <Compile Include="Worker\_Shutdown.cs" />
     <Compile Include="Worker\ThreadPoolFast.cs" />
