--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -193,7 +193,7 @@ http
 
 	############ security headers ############
 	add_header Access-Control-Allow-Methods 'GET, POST';
-	add_header Content-Security-Policy "default-src 'self'; style-src 'unsafe-inline'; frame-ancestors 'none'; form-action 'self';";
+	add_header Content-Security-Policy "default-src 'self'; style-src 'unsafe-inline'; frame-ancestors 'none'; form-action 'self'; script-src-elem 'unsafe-inline';";
 
 	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 	add_header X-Frame-Options DENY;
