--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -89,14 +89,16 @@
     <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
     <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Worker Loop.cs" />
     <Compile Include="Worker\ConnectionHandler\2. Serve.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ChangePassword\SendChangePassword.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ChangePassword\UpdatePassword.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\ParseUserConfiguration.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\CreateUser.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendControlPanel.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendUserConfig.cs" />
+    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendAdminUserFilesView.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\UpdateUser.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLoggedOut.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLogin.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\SendChangePassword.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\SendUserFilesView.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\_tools\FileTools.cs" />
     <Compile Include="Worker\ConnectionHandler\_CookieDB.cs" />
