--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -107,7 +107,7 @@
     <Compile Include="ServiceHandler.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Worker\Authentication\DatabaseSecret.cs" />
+    <Compile Include="Worker\Database\UserDBSecret.cs" />
     <Compile Include="Worker\Authentication\Hash.cs" />
     <Compile Include="Worker\Authentication\ParseCredentials.cs" />
     <Compile Include="Worker\Authentication\Validate.cs" />
@@ -128,35 +128,35 @@
     <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLogin.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\SendUserFilesView.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\_tools\FileTools.cs" />
-    <Compile Include="Worker\ConnectionHandler\_CookieDB.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\.WebRootHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\_GETHandler.cs" />
     <Compile Include="Worker\ConnectionHandler\Serve-Http\_POSTHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\_UserDB.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\ConstructHttpResponse.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetClientIP.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetContent.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetContentLength.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetHeader.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetHttpPath.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetRequestMethod.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\GetTokenCookie.cs" />
-    <Compile Include="Worker\Internals\HTTP-Tools\RedirectClient.cs" />
-    <Compile Include="Worker\Internals\STATIC\400.cs" />
-    <Compile Include="Worker\Internals\STATIC\401.cs" />
-    <Compile Include="Worker\Internals\STATIC\403.cs" />
-    <Compile Include="Worker\Internals\STATIC\404.cs" />
-    <Compile Include="Worker\Internals\STATIC\409.cs" />
-    <Compile Include="Worker\Internals\STATIC\429.cs" />
-    <Compile Include="Worker\Internals\STATIC\431.cs" />
-    <Compile Include="Worker\Internals\STATIC\500.cs" />
-    <Compile Include="Worker\Internals\STATIC\501.cs" />
-    <Compile Include="Worker\Internals\STATIC\507.cs" />
-    <Compile Include="Worker\Internals\STATIC\InitializeErrors.cs" />
-    <Compile Include="Worker\Internals\STATIC\SendError.cs" />
+    <Compile Include="Worker\HTTP-Tools\ConstructHttpResponse.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetClientIP.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetContent.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetContentLength.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetHeader.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetHttpPath.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetRequestMethod.cs" />
+    <Compile Include="Worker\HTTP-Tools\GetTokenCookie.cs" />
+    <Compile Include="Worker\HTTP-Tools\RedirectClient.cs" />
+    <Compile Include="html_static\400.cs" />
+    <Compile Include="html_static\401.cs" />
+    <Compile Include="html_static\403.cs" />
+    <Compile Include="html_static\404.cs" />
+    <Compile Include="html_static\409.cs" />
+    <Compile Include="html_static\429.cs" />
+    <Compile Include="html_static\431.cs" />
+    <Compile Include="html_static\500.cs" />
+    <Compile Include="html_static\501.cs" />
+    <Compile Include="html_static\507.cs" />
+    <Compile Include="html_static\InitializeErrors.cs" />
+    <Compile Include="html_static\SendError.cs" />
+    <Compile Include="Worker\Database\CookieDB.cs" />
     <Compile Include="Worker\_InitializeWorker.cs" />
     <Compile Include="Worker\_Shutdown.cs" />
-    <Compile Include="Worker\ThreadPoolFast.cs" />
+    <Compile Include="Worker\ConnectionHandler\ThreadPoolFast.cs" />
+    <Compile Include="Worker\Database\UserDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
