--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -15,6 +15,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NoWarn>CS0618</NoWarn>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,7 +28,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -95,10 +95,9 @@
   <ItemGroup>
     <Compile Include="Entry.cs" />
     <Compile Include="App\AssemblyInfo.cs" />
-    <Compile Include="Logging\Interface.cs" />
-    <Compile Include="Logging\LogMessage.cs" />
-    <Compile Include="Logging\LogSeverity.cs" />
-    <Compile Include="Logging\xDebug.cs" />
+    <Compile Include="Program\Logging\Logging.cs" />
+    <Compile Include="Program\Logging\LogMessage.cs" />
+    <Compile Include="Program\Logging\LogSeverity.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -107,56 +106,56 @@
     <Compile Include="ServiceHandler.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Worker\Database\UserDBSecret.cs" />
-    <Compile Include="Worker\Authentication\Hash.cs" />
-    <Compile Include="Worker\Authentication\ParseCredentials.cs" />
-    <Compile Include="Worker\Authentication\Validate.cs" />
-    <Compile Include="Worker\Authentication\PerformLogin.cs" />
-    <Compile Include="Worker\Authentication\ValidateClient.cs" />
-    <Compile Include="Worker\ConnectionHandler\3. CloseConnection.cs" />
-    <Compile Include="Worker\ConnectionHandler\1. AcceptConnection - Main Worker Loop.cs" />
-    <Compile Include="Worker\ConnectionHandler\2. Serve.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ChangePassword\SendChangePassword.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ChangePassword\UpdatePassword.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\ParseUserConfiguration.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\CreateUser.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendControlPanel.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendUserConfig.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\SendAdminUserFilesView.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\ControlPanel\UpdateUser.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLoggedOut.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLogin.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\SendUserFilesView.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\_tools\FileTools.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\.WebRootHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\_GETHandler.cs" />
-    <Compile Include="Worker\ConnectionHandler\Serve-Http\_POSTHandler.cs" />
-    <Compile Include="Worker\HTTP-Tools\ConstructHttpResponse.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetClientIP.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetContent.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetContentLength.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetHeader.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetHttpPath.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetRequestMethod.cs" />
-    <Compile Include="Worker\HTTP-Tools\GetTokenCookie.cs" />
-    <Compile Include="Worker\HTTP-Tools\RedirectClient.cs" />
-    <Compile Include="html_static\400.cs" />
-    <Compile Include="html_static\401.cs" />
-    <Compile Include="html_static\403.cs" />
-    <Compile Include="html_static\404.cs" />
-    <Compile Include="html_static\409.cs" />
-    <Compile Include="html_static\429.cs" />
-    <Compile Include="html_static\431.cs" />
-    <Compile Include="html_static\500.cs" />
-    <Compile Include="html_static\501.cs" />
-    <Compile Include="html_static\507.cs" />
-    <Compile Include="html_static\InitializeErrors.cs" />
-    <Compile Include="html_static\SendError.cs" />
-    <Compile Include="Worker\Database\CookieDB.cs" />
-    <Compile Include="Worker\_InitializeWorker.cs" />
-    <Compile Include="Worker\_Shutdown.cs" />
-    <Compile Include="Worker\ConnectionHandler\ThreadPoolFast.cs" />
-    <Compile Include="Worker\Database\UserDB.cs" />
+    <Compile Include="Program\Database\UserDBSecret.cs" />
+    <Compile Include="Program\Worker\Authentication\Hash.cs" />
+    <Compile Include="Program\Worker\Authentication\ParseCredentials.cs" />
+    <Compile Include="Program\Worker\Authentication\Validate.cs" />
+    <Compile Include="Program\Worker\Authentication\PerformLogin.cs" />
+    <Compile Include="Program\Worker\Authentication\ValidateClient.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\3. CloseConnection.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\1. AcceptConnection - Main Worker Loop.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\2. Serve.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ChangePassword\SendChangePassword.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ChangePassword\UpdatePassword.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\ParseUserConfiguration.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\CreateUser.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\SendControlPanel.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\SendUserConfig.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\SendAdminUserFilesView.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\ControlPanel\UpdateUser.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLoggedOut.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\Log-in-out\SendLogin.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\UserView\SendUserFilesView.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\FileTools.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\.WebRootHandler.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\GET-Handler.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve-Http\POST-Handler.cs" />
+    <Compile Include="Program\HTTP\_BuildResponse.cs" />
+    <Compile Include="Program\HTTP\GetClientIP.cs" />
+    <Compile Include="Program\HTTP\GetContent.cs" />
+    <Compile Include="Program\HTTP\GetContentLength.cs" />
+    <Compile Include="Program\HTTP\GetHeader.cs" />
+    <Compile Include="Program\HTTP\GetHttpPath.cs" />
+    <Compile Include="Program\HTTP\GetRequestMethod.cs" />
+    <Compile Include="Program\HTTP\GetTokenCookie.cs" />
+    <Compile Include="Program\HTTP\RedirectClient.cs" />
+    <Compile Include="Program\HTTP\Errors\400.cs" />
+    <Compile Include="Program\HTTP\Errors\401.cs" />
+    <Compile Include="Program\HTTP\Errors\403.cs" />
+    <Compile Include="Program\HTTP\Errors\404.cs" />
+    <Compile Include="Program\HTTP\Errors\409.cs" />
+    <Compile Include="Program\HTTP\Errors\429.cs" />
+    <Compile Include="Program\HTTP\Errors\431.cs" />
+    <Compile Include="Program\HTTP\Errors\500.cs" />
+    <Compile Include="Program\HTTP\Errors\501.cs" />
+    <Compile Include="Program\HTTP\Errors\507.cs" />
+    <Compile Include="Program\HTTP\Errors\InitializeErrors.cs" />
+    <Compile Include="Program\HTTP\Errors\SendError.cs" />
+    <Compile Include="Program\Database\CookieDB.cs" />
+    <Compile Include="Program\Worker\_InitializeWorker.cs" />
+    <Compile Include="Program\Worker\_Shutdown.cs" />
+    <Compile Include="Program\Worker\ThreadPoolFast.cs" />
+    <Compile Include="Program\Database\UserDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -185,7 +184,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8.1">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.8.1 %28x86 und x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.8.1 %28x86 and x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
